--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@angular/http": "5.2.11",
     "@angular/platform-browser": "5.2.11",
     "@angular/platform-browser-dynamic": "5.2.11",
+    "@capacitor/cli": "^1.0.0-beta.8",
+    "@capacitor/core": "^1.0.0-beta.8",
     "@ionic-native/core": "~4.15.0",
     "@ionic-native/native-storage": "^4.16.0",
     "@ionic-native/splash-screen": "~4.15.0",
@@ -34,6 +36,7 @@
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.2.0",
+    "@types/googlemaps": "^3.30.16",
     "typescript": "~2.6.2"
   },
   "description": "An Ionic project"
